--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          username: @{{ secrets.DOCKERHUB_USER }}
-          password: @{{ scerets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: action/checkout@v2
+        uses: actions/checkout@v2
       - name: Test
         run: docker-compose run --rm app sh -c "python manage.py test"
       - name: Lint
-        run: docker-compse run --rm app sh -c "flake8"      
+        run: docker-compose run --rm app sh -c "flake8"
