Modified docoker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,14 @@ services:
     environment:
       - DB_HOST=db
       - DB_NAME=devdb
-      - DB_USER=debuser
+      - DB_USER=devuser
       - DB_PASS=changeme
     depends_on:
       - db
   db:
     image: postgres:13-alpine
     volumes:
-      - dev-db-data:/var/lib/postgressql/data
+      - dev-db-data:/var/lib/postgresql/data
     environment:
       - POSTGRE_DB=devdb
       - POSTGRES_USER=devuser
